# livegaurd

./: .env.example  .gitignore  COLAB_GUIDE.md  README.md  pyproject.toml
data/prompts/: safety_tests.json  sycophantic.json  truthful.json
notebooks/: 01_environment_test.ipynb  02_feature_discovery.ipynb  03_intervention_demo.ipynb  04_evaluation.ipynb
src/livegaurd/: __init__.py  hooks.py  sae_loader.py
tests/: __init__.py
